[gd_scene load_steps=11 format=3 uid="uid://1bdu2jwu5g63"]

[ext_resource type="Script" uid="uid://do2gi0jo3igxr" path="res://scripts/village_hotel.gd" id="1_p06e1"]
[ext_resource type="Texture2D" uid="uid://c0pgoh688os8b" path="res://sprites/zone_commer√ßante.png" id="2_rg7nq"]
[ext_resource type="Texture2D" uid="uid://2gtn3xlwn53u" path="res://sprites/decor.png" id="3_uwh5a"]
[ext_resource type="PackedScene" uid="uid://wh4gxqeqyw78" path="res://scenes/steven.tscn" id="4_xgjan"]
[ext_resource type="Texture2D" uid="uid://bi7snn7iinctr" path="res://sprites/maisons_front.png" id="5_7d6uk"]
[ext_resource type="Texture2D" uid="uid://db74q2xm1vphq" path="res://sprites/RPG-HOTEL.png" id="6_1ef3c"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0aefm"]
normal = Vector2(0, 1)
distance = 179.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_486vb"]
size = Vector2(96, 575)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3f2s"]
size = Vector2(303.409, 89.5456)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ef3c"]
size = Vector2(15, 7)

[node name="village_hotel" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_p06e1")

[node name="DecorBas" type="Sprite2D" parent="."]
position = Vector2(0, 178)
scale = Vector2(2.2, 2.2)
texture = ExtResource("2_rg7nq")
centered = false

[node name="decor" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.8, 1)

[node name="Sprite2D" type="Sprite2D" parent="decor"]
position = Vector2(0, 15)
scale = Vector2(2.2, 2.2)
texture = ExtResource("3_uwh5a")
centered = false

[node name="limitesMonde" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="limitesMonde"]
shape = SubResource("WorldBoundaryShape2D_0aefm")

[node name="steven" parent="." instance=ExtResource("4_xgjan")]
position = Vector2(223, 330)

[node name="goto_rue_droite" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="goto_rue_droite"]
position = Vector2(702, 300)
shape = SubResource("RectangleShape2D_486vb")

[node name="goto_rue_gauche" type="Area2D" parent="."]
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="goto_rue_gauche"]
position = Vector2(-42, 300)
shape = SubResource("RectangleShape2D_486vb")

[node name="MaisonsFront" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(330, 569)
scale = Vector2(2.2, 2.2)
texture = ExtResource("5_7d6uk")

[node name="StaticBody2D" type="StaticBody2D" parent="MaisonsFront"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MaisonsFront/StaticBody2D"]
position = Vector2(0.568253, 11.1364)
shape = SubResource("RectangleShape2D_w3f2s")

[node name="Rpg-hotel" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(348, 176)
scale = Vector2(2.1, 2.1)
texture = ExtResource("6_1ef3c")
offset = Vector2(-3.33334, -28.0952)

[node name="StaticBody2D" type="StaticBody2D" parent="Rpg-hotel"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rpg-hotel/StaticBody2D"]
position = Vector2(-3.80952, -23.3333)
polygon = PackedVector2Array(-107.619, 77.6191, -89.0476, 82.8572, -70, 86.1905, -54.7619, 80.9524, -46.6667, 80.4762, -46.6667, 88.5714, -22.8571, 89.0476, 30.4762, 84.7619, 71.9048, 68.0952, 100, 25.7143, 102.857, -23.8095, -89.0476, -16.6667, -103.81, 15.2381)

[node name="goto_hotel" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="goto_hotel"]
z_index = 2
position = Vector2(234.5, 299.5)
shape = SubResource("RectangleShape2D_1ef3c")

[connection signal="body_entered" from="goto_rue_droite" to="." method="_on_goto_rue_droite_body_entered"]
[connection signal="body_entered" from="goto_rue_gauche" to="." method="_on_goto_rue_gauche_body_entered"]
[connection signal="body_entered" from="goto_hotel" to="." method="_on_goto_hotel_body_entered"]
